- Fixed icons misaligning when rotating - Finalized cells array with quadrants and coordinates - Fixed cursor behaviour when placing ships - Reordered elements inside the placeShip function (and removed test image)
Next:
  - Scaling game icon sizes based on ship types
  - Implementing algorithm for highlighting cells + connecting them to game mechanics

--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -46,7 +46,13 @@ img.ship {
   width: 100px;
 }
 
-img.car {
+dialog {
+  overflow: hidden;
+  cursor: grabbing;
+  padding: 15px;
+}
+
+img.gameIcon {
   width: 90px;
   height: 30px;
 }
